--- a/index.html
+++ b/index.html
@@ -158,9 +158,27 @@
                         <i class="fa fa-arrow-down"></i>
                        </button>
                   </div>
+                </a>
+              </div>
+             </div>
+             <div class="w3-third w3-margin-bottom w3-animate-zoom">
+            <div class="image-top">
+               <a class="image-top" href="image/natural/3.jpg" data-caption="Goldern Bangla" style="width:99%;">
+                  <img class="img img-fluid" src="image/natural/3.jpg" alt="" style="width:100%;">
+                 <div class="like-view">
+                     <button type="button" class="btn btn-secondary" title="view">
+                        <i class="fa fa-eye"></i>
+                     </button>
+                     <button type="button" class="btn btn-secondary" title="Like">
+                        <i class="fa fa-heart-o"></i>
+                     </button>
+                     <button type="button" class="btn btn-secondary" title="Download">
+                        <i class="fa fa-arrow-down"></i>
+                     </button>
+                 </div>
                </a>
              </div>
-           </div>
+            </div>
          </div>
       </div>
    </div>
@@ -229,6 +247,24 @@
                </a>
              </div>
            </div>
+           <div class="w3-third w3-margin-bottom w3-animate-zoom">
+            <div class="image-top">
+             <a class="image-top" href="image/wellpaper/3.jpg" data-caption="Goldern Bangla" style="width:99%;">
+               <img class="img img-fluid" src="image/wellpaper/3.jpg" alt="" style="width:100%;">
+               <div class="like-view">
+                <button type="button" class="btn btn-secondary" title="view">
+                   <i class="fa fa-eye"></i>
+                 </button>
+                 <button type="button" class="btn btn-secondary" title="Like">
+                   <i class="fa fa-heart-o"></i>
+                  </button>
+                  <button type="button" class="btn btn-secondary" title="Download">
+                    <i class="fa fa-arrow-down"></i>
+                   </button>
+              </div>
+           </a>
+         </div>
+       </div>
          </div>
       </div>
    </div>
@@ -297,6 +333,24 @@
                </a>
              </div>
            </div>
+           <div class="w3-third w3-margin-bottom w3-animate-zoom">
+            <div class="image-top">
+             <a class="image-top" href="image/amazing/4.jpg" data-caption="Goldern Bangla" style="width:99%;">
+               <img class="img img-fluid" src="image/amazing/4.jpg" alt="" style="width:100%;">
+               <div class="like-view">
+                <button type="button" class="btn btn-secondary" title="view">
+                   <i class="fa fa-eye"></i>
+                 </button>
+                 <button type="button" class="btn btn-secondary" title="Like">
+                   <i class="fa fa-heart-o"></i>
+                  </button>
+                  <button type="button" class="btn btn-secondary" title="Download">
+                    <i class="fa fa-arrow-down"></i>
+                   </button>
+              </div>
+           </a>
+         </div>
+       </div>
          </div>
       </div>
    </div>
@@ -365,6 +419,24 @@
                </a>
              </div>
            </div>
+           <div class="w3-third w3-margin-bottom w3-animate-zoom">
+            <div class="image-top">
+             <a class="image-top" href="image/Trees/3.jpg" data-caption="Goldern Bangla" style="width:99%;">
+               <img class="img img-fluid" src="image/Trees/3.jpg" alt="" style="width:100%;">
+               <div class="like-view">
+                <button type="button" class="btn btn-secondary" title="view">
+                   <i class="fa fa-eye"></i>
+                 </button>
+                 <button type="button" class="btn btn-secondary" title="Like">
+                   <i class="fa fa-heart-o"></i>
+                  </button>
+                  <button type="button" class="btn btn-secondary" title="Download">
+                    <i class="fa fa-arrow-down"></i>
+                   </button>
+              </div>
+           </a>
+         </div>
+       </div>
          </div>
       </div>
    </div>
@@ -433,6 +505,24 @@
                </a>
              </div>
            </div>
+           <div class="w3-third w3-margin-bottom w3-animate-zoom">
+            <div class="image-top">
+             <a class="image-top" href="image/river/10.jpg" data-caption="Goldern Bangla" style="width:99%;">
+               <img class="img img-fluid" src="image/river/10.jpg" alt="" style="width:100%;">
+               <div class="like-view">
+                <button type="button" class="btn btn-secondary" title="view">
+                   <i class="fa fa-eye"></i>
+                 </button>
+                 <button type="button" class="btn btn-secondary" title="Like">
+                   <i class="fa fa-heart-o"></i>
+                  </button>
+                  <button type="button" class="btn btn-secondary" title="Download">
+                    <i class="fa fa-arrow-down"></i>
+                   </button>
+              </div>
+           </a>
+         </div>
+       </div>
          </div>
       </div>
    </div>
@@ -483,6 +573,24 @@
                       </a>
                    </div>
                </div>
+               <div class="w3-third w3-margin-bottom w3-animate-zoom">
+                <div class="image-top">
+                  <a class="image-top" href="image/birds/2.jpg" data-caption="Goldern Bangla" style="width:99%;">
+                    <img class="img img-fluid" src="image/birds/2.jpg" alt="" style="width:100%;">
+                      <div class="like-view">
+                         <button type="button" class="btn btn-secondary" title="view">
+                           <i class="fa fa-eye"></i>
+                         </button>
+                         <button type="button" class="btn btn-secondary" title="Like">
+                           <i class="fa fa-heart-o"></i>
+                         </button>
+                         <button type="button" class="btn btn-secondary" title="Download">
+                           <i class="fa fa-arrow-down"></i>
+                         </button>
+                       </div>
+                    </a>
+                 </div>
+                </div>
                 <div class="w3-third w3-margin-bottom w3-animate-zoom">
                   <div class="image-top">
                    <a class="image-top" href="image/birds/4.jpg" data-caption="Goldern Bangla" style="width:99%;">
@@ -551,6 +659,24 @@
                       </a>
                    </div>
                </div>
+               <div class="w3-third w3-margin-bottom w3-animate-zoom">
+                <div class="image-top">
+                  <a class="image-top" href="image/city/2.jpg" data-caption="Goldern Bangla" style="width:99%;">
+                    <img class="img img-fluid" src="image/city/2.jpg" alt="" style="width:100%;">
+                      <div class="like-view">
+                         <button type="button" class="btn btn-secondary" title="view">
+                           <i class="fa fa-eye"></i>
+                         </button>
+                         <button type="button" class="btn btn-secondary" title="Like">
+                           <i class="fa fa-heart-o"></i>
+                         </button>
+                         <button type="button" class="btn btn-secondary" title="Download">
+                           <i class="fa fa-arrow-down"></i>
+                         </button>
+                       </div>
+                    </a>
+                 </div>
+             </div>
                 <div class="w3-third w3-margin-bottom w3-animate-zoom">
                   <div class="image-top">
                    <a class="image-top" href="image/city/3.jpg" data-caption="Goldern Bangla" style="width:99%;">
@@ -619,6 +745,24 @@
                     </a>
                  </div>
              </div>
+             <div class="w3-third w3-margin-bottom w3-animate-zoom">
+              <div class="image-top">
+                <a class="image-top" href="image/animal/2.jpg" data-caption="Goldern Bangla" style="width:99%;">
+                  <img class="img img-fluid" src="image/animal/2.jpg" alt="" style="width:100%;">
+                    <div class="like-view">
+                       <button type="button" class="btn btn-secondary" title="view">
+                         <i class="fa fa-eye"></i>
+                       </button>
+                       <button type="button" class="btn btn-secondary" title="Like">
+                         <i class="fa fa-heart-o"></i>
+                       </button>
+                       <button type="button" class="btn btn-secondary" title="Download">
+                         <i class="fa fa-arrow-down"></i>
+                       </button>
+                     </div>
+                  </a>
+               </div>
+              </div>
               <div class="w3-third w3-margin-bottom w3-animate-zoom">
                 <div class="image-top">
                  <a class="image-top" href="image/animal/3.jpg" data-caption="Goldern Bangla" style="width:99%;">
@@ -688,6 +832,24 @@
                     </a>
                  </div>
              </div>
+             <div class="w3-third w3-margin-bottom w3-animate-zoom">
+              <div class="image-top">
+                <a class="image-top" href="image/peoples/2.jpg" data-caption="Goldern Bangla" style="width:99%;">
+                  <img class="img img-fluid" src="image/peoples/2.jpg" alt="" style="width:100%;">
+                    <div class="like-view">
+                       <button type="button" class="btn btn-secondary" title="view">
+                         <i class="fa fa-eye"></i>
+                       </button>
+                       <button type="button" class="btn btn-secondary" title="Like">
+                         <i class="fa fa-heart-o"></i>
+                       </button>
+                       <button type="button" class="btn btn-secondary" title="Download">
+                         <i class="fa fa-arrow-down"></i>
+                       </button>
+                     </div>
+                  </a>
+               </div>
+              </div>
               <div class="w3-third w3-margin-bottom w3-animate-zoom">
                 <div class="image-top">
                  <a class="image-top" href="image/peoples/people1.png" data-caption="Goldern Bangla" style="width:99%;">
@@ -757,6 +919,24 @@
                 </a>
              </div>
          </div>
+         <div class="w3-third w3-margin-bottom w3-animate-zoom">
+          <div class="image-top">
+            <a class="image-top" href="image/technology/event_technology.jpg" data-caption="Goldern Bangla" style="width:99%;">
+              <img class="img img-fluid" src="image/technology/event_technology.jpg" alt="event_technology" style="width:100%;">
+                <div class="like-view">
+                   <button type="button" class="btn btn-secondary" title="view">
+                     <i class="fa fa-eye"></i>
+                   </button>
+                   <button type="button" class="btn btn-secondary" title="Like">
+                     <i class="fa fa-heart-o"></i>
+                   </button>
+                   <button type="button" class="btn btn-secondary" title="Download">
+                     <i class="fa fa-arrow-down"></i>
+                   </button>
+                 </div>
+              </a>
+           </div>
+           </div>
           <div class="w3-third w3-margin-bottom w3-animate-zoom">
             <div class="image-top">
              <a class="image-top" href="image/technology/hand laptop.jpg" data-caption="Goldern Bangla" style="width:99%;">
@@ -826,6 +1006,24 @@
                 </a>
              </div>
          </div>
+         <div class="w3-third w3-margin-bottom w3-animate-zoom">
+          <div class="image-top">
+            <a class="image-top" href="image/business/2.jpg" data-caption="Goldern Bangla" style="width:99%;">
+              <img class="img img-fluid" src="image/business/2.jpg" alt="" style="width:100%;">
+                <div class="like-view">
+                   <button type="button" class="btn btn-secondary" title="view">
+                     <i class="fa fa-eye"></i>
+                   </button>
+                   <button type="button" class="btn btn-secondary" title="Like">
+                     <i class="fa fa-heart-o"></i>
+                   </button>
+                   <button type="button" class="btn btn-secondary" title="Download">
+                     <i class="fa fa-arrow-down"></i>
+                   </button>
+                 </div>
+              </a>
+           </div>
+          </div>
           <div class="w3-third w3-margin-bottom w3-animate-zoom">
             <div class="image-top">
              <a class="image-top" href="image/business/3.jpg" data-caption="Goldern Bangla" style="width:99%;">
