--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
 <!-- First Photo Grid-->
  <div class="w3-main" style="margin-left:250px;">
         <div class="w3-row-padding content">
-            <div class="baguetteBoxFour gallery">
+            <div class="baguetteBoxThree gallery">
                 <div class="w3-third w3-margin-bottom w3-animate-zoom">
                    <div class="image-top">
                      <a class="image-top" href="image/Trees/1.jpg" data-caption="Goldern Bangla" style="width:99%;">
