--- a/index.html
+++ b/index.html
@@ -60,14 +60,17 @@
 </nav>
 <!---------close side menu---->
 <!----------start slider section-->
-<div class="w3-main" style="margin-left:300px;">
-        <div class="navber w3-theme w3-animate-zoom w3-bar-item w3-large">
-          <p><i class="fa fa-bars w3-button w3-teal w3-hide-large w3-xlarge menu" onclick="w3_open()"></i>
-            <a href="index.html"><i class="fa fa-fw fa-home"></i> Home</a> 
-            <a href="#"><i class="fa fa-fw fa-search"></i> Search</a> 
-            <a href="contact.html"><i class="fa fa-fw fa-envelope"></i> Contact</a> 
-            <a href="Login.html"><i class="fa fa-fw fa-user"></i> Login</a>
-        </div>
+     <div class="w3-main" style="margin-left:300px;">
+         <div class="nav-top">
+           <li><a><i class="fa fa-bars w3-button w3-hide-large w3-xlarge menu" onclick="w3_open()"></i></a></li>
+           <li><a href="index.html"><i class="fa fa-fw fa-home"></i> Home</a></li> 
+           <li><a href="#"><i class="fa fa-fw fa-search"></i> Search</a> </li>
+           <li><a href="contact.html"><i class="fa fa-fw fa-envelope"></i> Contact</a> </li>
+           <li><a href="Login.html"><i class="fa fa-fw fa-user"></i> Login</a></li>
+          </div>
+      </div>
+<!-- slider -->
+      <div class="w3-main" style="margin-left:300px;">
         <div class="slider">
           <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner img-st">
@@ -870,7 +873,7 @@
 </div>
   <!-----Footer--------  -->
   <div class="w3-main" style="margin-left:300px;">
-<section class="footer w3-container w3-theme" style="padding:60px;margin-top: 0px;">
+<section class="footer w3-container w3-theme" style="padding:62px;margin-top: 0px;">
       <div class="container">
         <div class="row">
           <div class="col-md-3">
