--- a/Fashion.html
+++ b/Fashion.html
@@ -84,6 +84,16 @@
                <div class="carousel-item">
                  <img class="d-block w-100" src="image/w3.jpg" alt="Third slide" style="width: 100%;">
                </div>
+               <div class="carousel-caption">
+                <div class="clock" data-format='12'>
+                  <h1>00 : 00 : 00 AM</h1>
+                </div>
+                <div class="format">
+                  <h1>Format</h1>
+                  <button data-format='12'>12hours</button>
+                  <button data-format='24'>24hours</button>
+                </div>
+              </div>
              </div>
           </div>
          </div>
