--- a/index.html
+++ b/index.html
@@ -76,7 +76,8 @@
             <div class="carousel-inner img-st">
                <div class="carousel-item active">
                  <img class="d-block w-100" src="image/w4.jpg" alt="First slide" style="width: 100%;">
-               </div>
+                  
+                </div>
                <div class="carousel-item">
                  <img class="d-block w-100" src="image/w1.jpg" alt="Second slide"style="width: 100%;" >
                </div>
@@ -92,6 +93,16 @@
                <div class="carousel-item">
                  <img class="d-block w-100" src="image/w3.jpg" alt="Third slide" style="width: 100%;">
                </div>
+               <div class="carousel-caption">
+                <div class="clock" data-format='12'>
+                  <h1>00 : 00 : 00 AM</h1>
+                </div>
+                <div class="format">
+                  <h1>Format</h1>
+                  <button data-format='12'>12hours</button>
+                  <button data-format='24'>24hours</button>
+                </div>
+              </div>
              </div>
           </div>
          </div>
