--- a/login.html
+++ b/login.html
@@ -95,7 +95,7 @@
           </div>
            <div class="pass-link">
            <a href="#">Forgot password?</a></div>
-           <input class="btn1" type="submit" value="Login">
+           <input class="btn1 btn-laye" type="submit" value="Login">
            <div class="signup-link">
            Not a member? <a href="">Signup now</a></div>
         </form>
@@ -109,7 +109,7 @@
         </div>
         <div class="form-control">
             <label for="username">Email</label>
-            <input type="email" placeholder="......@gmail.com" id="email"/>
+            <input type="email" placeholder="Email Address" id="email"/>
             <i class="fas fa-check-circle"></i>
             <i class="fas fa-exclamation-circle"></i>
             <small>Error message</small>
@@ -128,7 +128,7 @@
             <i class="fas fa-exclamation-circle"></i>
             <small>Error message</small>
         </div>
-        <input class="btn1" type="submit" value="Signup">
+        <input class="btn1 btn-laye" type="submit" value="Signup">
       </form>  
       </div>
        </div>
