--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <nav class="w3-sidebar w3-bar-block w3-collapse w3-animate-left w3-card" style="z-index:3;width:300px;height: 100vh;" id="mySidebar">
   <a class="w3-bar-item w3-button w3-border-bottom w3-large" href="index.html"><img class="logo" src="image/Natural logo.png"></a>
      <a class="w3-bar-item w3-button w3-hide-large w3-large" href="javascript:void(0)" onclick="w3_close()">Close <i class="fa fa-remove"></i></a>
-       <a class="w3-bar w3-bar-item w3-button w3-teal" href="#">Plants Name</a>
+       <a class="w3-bar w3-bar-item w3-button w3-teal" href="#">Catagories</a>
          <input type="text" id="mySearch" onkeyup="myStyle()" placeholder="Search.." title="Type in a category">
            <ul id="myMenu" class="w3-container">
               <li><a href="natural.html">Natural</a></li>
@@ -61,7 +61,7 @@
 <!---------close side menu---->
 <!----------start slider section-->
      <div class="w3-main" style="margin-left:300px;">
-         <div class="nav-top">
+         <div class="nav-top justify-content-end">
            <li><a><i class="fa fa-bars w3-button w3-hide-large w3-xlarge menu" onclick="w3_open()"></i></a></li>
            <li><a href="index.html"><i class="fa fa-fw fa-home"></i> Home</a></li> 
            <li><a href="#"><i class="fa fa-fw fa-search"></i> Search</a> </li>
