--- a/login.html
+++ b/login.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="css/style.css">
 <link rel="stylesheet" href="css/login.css">
-<!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"> -->
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://www.w3schools.com/lib/w3-theme-teal.css">
@@ -67,7 +67,8 @@
     <li><a href="Login.html"><i class="fa fa-fw fa-user"></i> Login</a></li>
   </div>
 </div>  
-<!------ Tittle-->    
+<!------ Tittle--> 
+   
 <div class="w3-main" style="margin-left:300px;">
   <div class="wrapper">
     <div class="title-text">
@@ -76,7 +77,7 @@
         <div class="title signup">
         Signup Form</div>
     </div>
-    <div class="form-container container">
+    <div class="form-container container2">
       <div class="slide-controls">
         <input type="radio" name="slide" id="login" checked>
         <input type="radio" name="slide" id="signup">
