--- a/index.html
+++ b/index.html
@@ -27,47 +27,49 @@
        <a class="w3-bar w3-bar-item w3-button w3-teal" href="#">Catagories</a>
          <input type="text" id="mySearch" onkeyup="myStyle()" placeholder="Search.." title="Type in a category">
            <ul id="myMenu" class="w3-container">
-              <li><a href="natural.html">Natural</a></li>
-              <li><a href="wellpaper.html">Wellpapers</a></li>
-              <li><a href="Amazing.html">Amazing</a></li>
-              <li><a href="Trees.html">Trees</a></li>
-              <li><a href="River.html">River</a></li>
-              <li><a href="birds.html">Birds</a></li>
-              <li><a href="city.html">City</a></li>
-              <li><a href="Animal.html">Animals</a></li>
-              <li><a href="people.html">Pepoles</a></li>
-              <li><a href="technology.html">Technology</a></li>
-              <li><a href="business.html">Business & Work</a></li>
-              <li><a href="Architecture.html">Architecture</a></li>
-              <li><a href="travel.html">Travel</a></li>
-              <li><a href="texture.html">Textures & Patterns</a></li>
-              <li><a href="Interios.html">Interios</a></li>
-              <li><a href="food.html">Food & Drinks</a></li>
-              <li><a href="athletics.html">Athletics</a></li>
-              <li><a href="spirituality.html">Spirituality</a></li>
-              <li><a href="Health.html">Health & Wellness</a></li>
-              <li><a href="Fashion.html">Fashion</a></li>
-              <li><a href="experimental.html">Experimental</a></li>
-              <li><a href="workhome.html">Work from Home</a></li>
-              <li><a href="arts.html">Arts & Culture</a></li>
-              <li><a href="history.html">History</a></li>
-              <li><a href="love.html">Love Images</a></li>
-              <li><a href="sad.html">Sad Images</a></li>
-              <li><a href="background.html">Background image</a></li>
-              <li><a href="popular.html">Popular images</a></li>
-              <li><a href="fish.html">Fish images</a></li>
+              <li><a href="natural.html"><i id="fa" class="fab fa-pagelines"></i>Natural</a></li>
+              <li><a href="wellpaper.html"><i id="fa" class="fab fa-waze"></i>Wellpapers</a></li>
+              <li><a href="Amazing.html"><i id="fa" class="fas fa-sort-amount-up-alt"></i>Amazing</a></li>
+              <li><a href="Trees.html"><i id="fa" class="fas fa-tree"></i>Trees</a></li>
+              <li><a href="River.html"><i id="fa" class="fab fa-red-river"></i>River</a></li>
+              <li><a href="birds.html"><i id="fa" class="fas fa-dove"></i>Birds</a></li>
+              <li><a href="city.html"><i id="fa" class="fas fa-city"></i>City</a></li>
+              <li><a href="Animal.html"><i id="fa" class="fas fa-hippo"></i>Animals</a></li>
+              <li><a href="people.html"><i id="fa" class="fas fa-user-tie"></i>Pepoles</a></li>
+              <li><a href="technology.html"><i id="fa" class="fas fa-microchip"></i>Technology</a></li>
+              <li><a href="business.html"><i id="fa" class="fas fa-business-time"></i>Business & Work</a></li>
+              <li><a href="Architecture.html"><i id="fa" class="fas fa-archway"></i>Architecture</a></li>
+              <li><a href="travel.html"><i id="fa" class="fas fa-luggage-cart"></i>Travel</a></li>
+              <li><a href="texture.html"><i id="fa" class="fas fa-text-width"></i>Textures & Patterns</a></li>
+              <li><a href="Interios.html"><i id="fa" class="fas fa-transgender-alt"></i>Interios</a></li>
+              <li><a href="food.html"><i id="fa" class="fas fa-ice-cream"></i>Food & Drinks</a></li>
+              <li><a href="athletics.html"><i id="fa" class="fas fa-swimmer"></i>Athletics</a></li>
+              <li><a href="spirituality.html"><i id="fa" class="fas fa-running"></i>Spirituality</a></li>
+              <li><a href="Health.html"><i id="fa" class="fas fa-file-medical"></i>Health & Wellness</a></li>
+              <li><a href="Fashion.html"><i id="fa" class="fas fa-vest-patches"></i>Fashion</a></li>
+              <li><a href="experimental.html"><i id="fa" class="fas fa-vial"></i>Experimental</a></li>
+              <li><a href="workhome.html"><i id="fa" class="fas fa-laptop-house"></i>Work from Home</a></li>
+              <li><a href="arts.html"><i id="fa" class="fas fa-paint-brush"></i>Arts & Culture</a></li>
+              <li><a href="history.html"><i id="fa" class="fas fa-history"></i>History</a></li>
+              <li><a href="love.html"><i id="fa" class="fas fa-heart"></i>Love Images</a></li>
+              <li><a href="sad.html"><i id="fa" class="fas fa-sad-tear"></i>Sad Images</a></li>
+              <li><a href="background.html"><i id="fa" class="fas fa-hat-cowboy-side"></i>Background image</a></li>
+              <li><a href="popular.html"><i id="fa" class="fas fa-fire-alt"></i>Popular images</a></li>
+              <li><a href="fish.html"><i id="fa" class="fas fa-fish"></i>Fish images</a></li>
            </ul>
 </nav>
 <!---------close side menu---->
 <!----------start slider section-->
      <div class="w3-main" style="margin-left:300px;">
-         <div class="nav-top justify-content-end">
-           <li><a><i class="fa fa-bars w3-button w3-hide-large w3-xlarge menu" onclick="w3_open()"></i></a></li>
+         <div class="nav-top" id="nav-top">
+          <a><i class="fa fa-bars w3-button w3-hide-large w3-xlarge nav-link" onclick="w3_open()"></i></a>
+           <div class=" nav-top justify-content-end">
            <li><a href="index.html"><i class="fa fa-fw fa-home"></i> Home</a></li> 
            <li><a href="#"><i class="fa fa-fw fa-search"></i> Search</a> </li>
            <li><a href="contact.html"><i class="fa fa-fw fa-envelope"></i> Contact</a> </li>
            <li><a href="Login.html"><i class="fa fa-fw fa-user"></i> Login</a></li>
           </div>
+        </div>
       </div>
 <!-- slider -->
       <div class="w3-main" style="margin-left:300px;">
@@ -951,6 +953,7 @@
 <script src="js/bodyimage (2).js"></script>
 <script src="./js/main.js"></script>  
 <script src="https://unpkg.com/scrollreveal"></script>
+<script src="https://kit.fontawesome.com/68176f7840.js" crossorigin="anonymous"></script>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>   
