--- a/login.html
+++ b/login.html
@@ -89,7 +89,7 @@
      <div id="form" class="form-inner from">
         <form action="#" class="login">
           <div class="field">
-            <input type="text" placeholder="Email Address" required>
+            <input class="input" type="text" placeholder="Email Address" required>
           </div>
           <div class="field">
             <input type="password" placeholder="Password" required>
@@ -101,30 +101,30 @@
            Not a member? <a href="">Signup now</a></div>
         </form>
        <form action="#" class="signup">
-        <div class="form-control">
+        <div class="form-control1">
           <label for="username">Username</label>
-          <input type="text" placeholder="Your Name" id="username" />
+          <input type="text" placeholder="Your Name" id="username"/>
           <i class="fas fa-check-circle"></i>
           <i class="fas fa-exclamation-circle"></i>
           <small>Error message</small>
         </div>
-        <div class="form-control">
+        <div class="form-control1">
             <label for="username">Email</label>
             <input type="email" placeholder="Email Address" id="email"/>
             <i class="fas fa-check-circle"></i>
             <i class="fas fa-exclamation-circle"></i>
             <small>Error message</small>
         </div>
-        <div class="form-control">
+        <div class="form-control1">
             <label for="username">Password</label>
             <input type="password" placeholder="Password" id="password"/>
             <i class="fas fa-check-circle"></i>
             <i class="fas fa-exclamation-circle"></i>
             <small>Error message</small>
         </div>
-        <div class="form-control">
+        <div class="form-control1">
             <label for="username">Confirm Password</label>
-            <input type="password" placeholder="Confirm Password" id="password2"/>
+            <input class="input" type="password" placeholder="Confirm Password" id="password2"/>
             <i class="fas fa-check-circle"></i>
             <i class="fas fa-exclamation-circle"></i>
             <small>Error message</small>
