--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
 
 </style>
 <body>
+  <!-- go to top -->
+  <div class="w3-main" style="margin-left:300px;">
+    <button onclick="topFunction()" id="myBtn" title="Go to top"><i class="fa fa-chevron-up"></i></button>
+  </div>
 <!--------------------start nav section----------- -->
 <!-------------------- End carousel slider section----------- -->
 <nav class="w3-sidebar w3-bar-block w3-collapse w3-animate-left w3-card" style="z-index:3;width:300px;height: 100vh;" id="mySidebar">
@@ -95,7 +99,7 @@
                <div class="carousel-item">
                  <img class="d-block w-100" src="image/w3.jpg" alt="Third slide" style="width: 100%;">
                </div>
-               <div class="carousel-caption">
+               <div class="C">
                 <div class="clock" data-format='12'>
                   <h1>00 : 00 : 00 AM</h1>
                 </div>
@@ -109,16 +113,13 @@
           </div>
          </div>
 </div>  
-<!------Photo Grid Tittle-->    
+<!------Photo Grid Tittle-->      
 <div class="w3-main" style="margin-left:300px;">
-  <button onclick="topFunction()" id="myBtn" title="Go to top"><i class="fa fa-chevron-up"></i></button>
-</div>  
-    <div class="w3-main" style="margin-left:300px;">
       <div class="nature w3-container">
         <H1>Natural</H1>
         <p>Let’s celebrate the magic of Mother Earth — with images of everything our planet has to offer, from stunning seascapes, starry skies, and everything in between.</p>
       </div>
-    </div>
+  </div>
 <!-- First Photo Grid-->
  <div class="w3-main" style="margin-left:300px;">
         <div class="w3-row-padding content">
