--- a/Amazing.html
+++ b/Amazing.html
@@ -5,7 +5,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <link rel="stylesheet" href="css/style.css">
 <link rel="stylesheet" href="css/bodyimagestyle.css">
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://www.w3schools.com/lib/w3-theme-teal.css">
@@ -55,15 +55,21 @@
            </ul>
 </nav>
 <!---------close side menu---->
+<!----------start Top nav section-->
+<div class="w3-main nav sticky-top" style="margin-left:300px;">
+   <div class="nav-top" id="nav-top">
+       <a><i class="fa fa-bars w3-button w3-hide-large w3-xlarge nav-link" onclick="w3_open()"></i></a>
+         <div class=" nav-top justify-content-end">
+            <li><a href="index.html"><i class="fa fa-fw fa-home"></i> Home</a></li> 
+            <li><a href="#"><i class="fa fa-fw fa-search"></i> Search</a> </li>
+            <li><a href="contact.html"><i class="fa fa-fw fa-envelope"></i> Contact</a> </li>
+            <li><a href="Login.html"><i class="fa fa-fw fa-user"></i> Login</a></li>
+        </div>
+    </div>
+</div>
+<!-- End Top navsection -->
 <!----------start slider section-->
 <div class="w3-main " style="margin-left:300px;">
-         <div class="nav-top">
-             <li><a><i class="fa fa-bars w3-button w3-hide-large w3-xlarge menu" onclick="w3_open()"></i></a></li>
-             <li><a href="index.html"><i class="fa fa-fw fa-home"></i> Home</a></li> 
-             <li><a href="#"><i class="fa fa-fw fa-search"></i> Search</a> </li>
-             <li><a href="contact.html"><i class="fa fa-fw fa-envelope"></i> Contact</a> </li>
-             <li><a href="Login.html"><i class="fa fa-fw fa-user"></i> Login</a></li>
-         </div>
           <div class="slider">
              <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
                <div class="carousel-inner img-st">
@@ -85,20 +91,29 @@
                   <div class="carousel-item">
                     <img class="d-block w-100" src="image/w3.jpg" alt="Third slide" style="width: 100%;">
                   </div>
-                  <div class="carousel-caption">
-                    <div class="clock" data-format='12'>
-                      <h1>00 : 00 : 00 AM</h1>
-                    </div>
-                    <div class="format">
-                      <h1>Format</h1>
-                      <button data-format='12'>12hours</button>
-                      <button data-format='24'>24hours</button>
-                    </div>
-                  </div>
                 </div>
              </div>
             </div>
    </div> 
+   <!-- submit photo modal btn -->
+   <!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        ...
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div>
+  </div>
+</div>
 <!------Photo Grid Tittle-->  
  <div class="w3-main" style="margin-left:300px;">
     <button onclick="topFunction()" id="myBtn" title="Go to top"><i class="fa fa-chevron-up"></i></button>
@@ -494,8 +509,9 @@
   <script src="js/bodyimage (2).js"></script>
   <script src="./js/main.js"></script>  
   <script src="https://unpkg.com/scrollreveal"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>   
+  <!-- <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>    -->
   </body>
   </html> 
