--- a/Contact.html
+++ b/Contact.html
@@ -55,17 +55,20 @@
            </ul>
 </nav>
 <!---------close side menu---->
-<!----------start slider section-->
-<div class="w3-main" style="margin-left:300px;">
-  <div class="nav-top">
-    <li><a><i class="fa fa-bars w3-button w3-hide-large w3-xlarge menu" onclick="w3_open()"></i></a></li>
+<!----------start top nav section-->
+<div class="w3-main nav sticky-top" style="margin-left:300px;">
+  <div class="nav-top" id="nav-top">
+   <a><i class="fa fa-bars w3-button w3-hide-large w3-xlarge nav-link" onclick="w3_open()"></i></a>
+    <div class=" nav-top justify-content-end">
     <li><a href="index.html"><i class="fa fa-fw fa-home"></i> Home</a></li> 
     <li><a href="#"><i class="fa fa-fw fa-search"></i> Search</a> </li>
     <li><a href="contact.html"><i class="fa fa-fw fa-envelope"></i> Contact</a> </li>
     <li><a href="Login.html"><i class="fa fa-fw fa-user"></i> Login</a></li>
-  </div>
-                 
-</div>  
+   </div>
+ </div>
+</div>
+<!-- End navsection -->
+ 
 <!------Photo Grid Tittle-->    
 <div class="w3-main" style="margin-left:300px;">
   <button onclick="topFunction()" id="myBtn" title="Go to top"><i class="fa fa-chevron-up"></i></button>
