--- a/index.html
+++ b/index.html
@@ -15,9 +15,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="css/bodyimagestyle.css">
-<style>
 
-</style>
 <body>
   <!-- go to top -->
   <div class="w3-main" style="margin-left:300px;">
@@ -28,7 +26,7 @@
 <nav class="w3-sidebar w3-bar-block w3-collapse w3-animate-left w3-card" style="z-index:3;width:300px;height: 100vh;" id="mySidebar">
   <a class="w3-bar-item w3-button w3-border-bottom w3-large" href="index.html"><img class="logo" src="image/Natural logo.png"></a>
      <a class="w3-bar-item w3-button w3-hide-large w3-large" href="javascript:void(0)" onclick="w3_close()">Close <i class="fa fa-remove"></i></a>
-       <a class="w3-bar w3-bar-item w3-button w3-teal" href="#">Catagories</a>
+       <a class="w3-bar w3-bar-item w3-button w3-teal category" href="#">Catagories</a>
          <input type="text" id="mySearch" onkeyup="myStyle()" placeholder="Search.." title="Type in a category">
            <ul id="myMenu" class="w3-container">
               <li><a href="natural.html"><i id="fa" class="fab fa-pagelines"></i>Natural</a></li>
@@ -64,7 +62,7 @@
 </nav>
 <!---------close side menu---->
 <!----------start slider section-->
-     <div class="w3-main" style="margin-left:300px;">
+     <div class="w3-main nav sticky-top" style="margin-left:300px;">
          <div class="nav-top" id="nav-top">
           <a><i class="fa fa-bars w3-button w3-hide-large w3-xlarge nav-link" onclick="w3_open()"></i></a>
            <div class=" nav-top justify-content-end">
@@ -76,13 +74,12 @@
         </div>
       </div>
 <!-- slider -->
-      <div class="w3-main" style="margin-left:300px;">
+      <div class="w3-main nav-slide" style="margin-left:300px;">
         <div class="slider">
           <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner img-st">
                <div class="carousel-item active">
                  <img class="d-block w-100" src="image/w4.jpg" alt="First slide" style="width: 100%;">
-                  
                 </div>
                <div class="carousel-item">
                  <img class="d-block w-100" src="image/w1.jpg" alt="Second slide"style="width: 100%;" >
@@ -116,7 +113,7 @@
 <!------Photo Grid Tittle-->      
 <div class="w3-main" style="margin-left:300px;">
       <div class="nature w3-container">
-        <H1>Natural</H1>
+        <h1>Natural</h1>
         <p>Let’s celebrate the magic of Mother Earth — with images of everything our planet has to offer, from stunning seascapes, starry skies, and everything in between.</p>
       </div>
   </div>
@@ -184,7 +181,7 @@
  <!------Photo Grid Tittle-->     
     <div class="w3-main" style="margin-left:300px;">
       <div class="nature w3-container">
-        <H1>Wellpapers</H1>
+        <h1>Wellpapers</h1>
         <p>Let’s celebrate the magic of Mother Earth — with images of everything our planet has to offer, from stunning seascapes, starry skies, and everything in between.</p>
       </div>
     </div>
@@ -252,7 +249,7 @@
 <!------Photo Grid Tittle-->    
     <div class="w3-main" style="margin-left:300px;">
       <div class="nature w3-container">
-        <H1>Amazing</H1>
+        <h1>Amazing</h1>
         <p>Let’s celebrate the magic of Mother Earth — with images of everything our planet has to offer, from stunning seascapes, starry skies, and everything in between.</p>
       </div>
     </div>
