--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <title>Image shop Home pages</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-
+<!-- ------All css link------- -->
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="w3/w3.css">
@@ -15,6 +15,16 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="css/bodyimagestyle.css">
+<!-- nivo slider css link -->
+<link href="http://www.jqueryscript.net/css/jquerysctipttop.css" rel="stylesheet" type="text/css">
+<link rel="stylesheet" href="themes/default/default.css" type="text/css" media="screen" />
+<link rel="stylesheet" href="themes/light/light.css" type="text/css" media="screen" />
+<link rel="stylesheet" href="themes/dark/dark.css" type="text/css" media="screen" />
+<link rel="stylesheet" href="themes/bar/bar.css" type="text/css" media="screen" />
+<link rel="stylesheet" href="css/nivo-slider.css" type="text/css" media="screen" />
+<link rel="stylesheet" href="css/styleee.css" type="text/css" media="screen" />
+<!-- End Nivo slider css link -->
+
 
 <body>
   <!-- go to top -->
@@ -74,42 +84,32 @@
         </div>
       </div>
 <!-- slider -->
-      <div class="w3-main nav-slide" style="margin-left:300px;">
-        <div class="slider">
-          <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-            <div class="carousel-inner img-st">
-               <div class="carousel-item active">
-                 <img class="d-block w-100" src="image/w4.jpg" alt="First slide" style="width: 100%;">
-                </div>
-               <div class="carousel-item">
-                 <img class="d-block w-100" src="image/w1.jpg" alt="Second slide"style="width: 100%;" >
-               </div>
-               <div class="carousel-item">
-                 <img class="d-block w-100" src="image/w2.jpg" alt="Third slide" style="width: 100%;">
-               </div>
-               <div class="carousel-item">
-                 <img class="d-block w-100" src="image/w5.jpg" alt="Third slide" style="width: 100%;">
-               </div>
-               <div class="carousel-item">
-                 <img class="d-block w-100" src="image/w6.jpg" alt="Third slide" style="width: 100%;">
-               </div>
-               <div class="carousel-item">
-                 <img class="d-block w-100" src="image/w3.jpg" alt="Third slide" style="width: 100%;">
-               </div>
-               <div class="C">
-                <div class="clock" data-format='12'>
-                  <h1>00 : 00 : 00 AM</h1>
-                </div>
-                <div class="format">
-                  <h1>Format</h1>
-                  <button data-format='12'>12hours</button>
-                  <button data-format='24'>24hours</button>
-                </div>
-              </div>
-             </div>
+<div class="w3-main" style="margin-left:280px">
+  <div class="slider">
+     <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+       <div class="carousel-inner img-st">
+          <div class="carousel-item active">
+            <img class="d-block w-100" src="image/amazing/1.jpg" alt="First slide" style="width: 100%;">
           </div>
-         </div>
-</div>  
+          <div class="carousel-item">
+            <img class="d-block w-100" src="image/amazing/3.jpg" alt="Second slide"style="width: 100%;" >
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="image/amazing/4.jpg" alt="Third slide" style="width: 100%;">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="image/w5.jpg" alt="Third slide" style="width: 100%;">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="image/w6.jpg" alt="Third slide" style="width: 100%;">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="image/w3.jpg" alt="Third slide" style="width: 100%;">
+          </div>
+        </div>
+     </div>
+    </div>
+</div> 
 <!------Photo Grid Tittle-->      
 <div class="w3-main" style="margin-left:300px;">
       <div class="nature w3-container">
@@ -920,7 +920,25 @@
 </div>
 
 <!-- -------End Footer----- -->
+<script type="text/javascript">
+  $(window).load(function() {
+      $('#slider').nivoSlider();
+  });
+  </script> 
+<script type="text/javascript">
 
+var _gaq = _gaq || [];
+_gaq.push(['_setAccount', 'UA-36251023-1']);
+_gaq.push(['_setDomainName', 'jqueryscript.net']);
+_gaq.push(['_trackPageview']);
+
+(function() {
+  var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+  ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+  var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+})();
+
+</script>
 <!-- -------Script File----- -->
 <script>
   window.onload = function() {
@@ -947,6 +965,13 @@
       year.innerText = new Date().getFullYear();
   };
   </script>
+  
+<!-- Nivo slider js link -->
+  <script src="./js/jquery.nivo.slider.js"></script>
+  <script src="./js/jquery.nivo.slider.pack.js"></script>
+  <!-- <script src="./js/nivo.js"></script> -->
+<!-- end nivo slider js link -->
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script> 
 <script src="js/bodyimage (1).js"></script>
 <script src="js/bodyimage (2).js"></script>
 <script src="./js/main.js"></script>  
