--- a/natural.html
+++ b/natural.html
@@ -11,11 +11,33 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="css/bodyimagestyle.css">
+<link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.css" />
+<link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
+<link rel="stylesheet" href="../package/swiper-bundle.min.css">
 
 <style>
+.swiper-body{
+      background: #fff;
+      font-family: Helvetica, Helvetica, Arial, sans-serif;
+      font-size: 14px;
+      color: #000;
+      margin: 0;
+      padding: 0;
+}
+.swiper-container {
+      width: 100%;
+      padding-top: 50px;
+      padding-bottom: 50px;
+    }
 
+    .swiper-slide {
+      background-position: center;
+      background-size: cover;
+      width: 300px;
+      height: 300px;
 
-</style>
+    }
+  </style>
 </head>
 <body>
 <!--------------------start nav section----------- -->
@@ -73,33 +95,25 @@
 <!-- End navsection -->
 <!----------start slider section-->
 <div class="w3-main" style="margin-left:300px;">
-  <div class="slider">
-          <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-            <div class="carousel-inner img-st">
-               <div class="carousel-item active">
-                 <img class="d-block w-100" src="image/natural/1.jpg" alt="First slide" style="width: 100%;">
-               </div>
-               <div class="carousel-item">
-                 <img class="d-block w-100" src="image/natural/2.jpg" alt="Second slide"style="width: 100%;" >
-               </div>
-               <div class="carousel-item">
-                 <img class="d-block w-100" src="image/natural/3.jpg" alt="Third slide" style="width: 100%;">
-               </div>
-               <div class="carousel-item">
-                 <img class="d-block w-100" src="image/natural/4.jpg" alt="Third slide" style="width: 100%;">
-               </div>
-               <div class="carousel-item">
-                 <img class="d-block w-100" src="image/natural/5.jpeg" alt="Third slide" style="width: 100%;">
-               </div>
-               <div class="carousel-item">
-                 <img class="d-block w-100" src="image/natural/6.jpeg" alt="Third slide" style="width: 100%;">
-               </div>
-               <div class="carousel-caption">
-                <!-- Nothing caption of the area -->
-              </div>
-             </div>
-          </div>
-         </div>
+    <!-- Swiper -->
+    <div class="swiper-body">
+  <div class="swiper-container">
+    <div class="swiper-wrapper">
+      <div class="swiper-slide" style="background-image:url(./image/natural/1.jpg)"></div>
+      <div class="swiper-slide" style="background-image:url(./image/natural/2.jpg)"></div>
+      <div class="swiper-slide" style="background-image:url(./image/natural/3.jpg)"></div>
+      <div class="swiper-slide" style="background-image:url(./image/natural/4.jpg)"></div>
+      <div class="swiper-slide" style="background-image:url(./image/natural/5.jpg)"></div>
+      <div class="swiper-slide" style="background-image:url(./image/natural/6.jpg)"></div>
+      <div class="swiper-slide" style="background-image:url(./image/natural/7.jpg)"></div>
+      <div class="swiper-slide" style="background-image:url(./image/natural/8.jpg)"></div>
+      <div class="swiper-slide" style="background-image:url(./image/natural/9.jpg)"></div>
+      <div class="swiper-slide" style="background-image:url(./image/natural/10.jpg)"></div>
+    </div>
+    <!-- Add Pagination -->
+    <div class="swiper-pagination"></div>
+  </div>
+</div>
 </div>  
 <!------Photo Grid Tittle-->    
 <div class="w3-main" style="margin-left:300px;">
@@ -496,10 +510,15 @@
         var year = document.getElementById('year');
         year.innerText = new Date().getFullYear();
     };
-    </script>
+  </script>
+
+  <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+  <script src="../package/swiper-bundle.min.js"></script>
+  <script src="https://unpkg.com/swiper/swiper-bundle.js"></script>
   <script src="js/bodyimage (1).js"></script>
   <script src="js/bodyimage (2).js"></script>
-  <script src="./js/main.js"></script>  
+  <script src="./js/main.js"></script> 
+  <script src="./js/natural.js"></script> 
   <script src="https://unpkg.com/scrollreveal"></script>
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
